--- a/sog/build.xml
+++ b/sog/build.xml
@@ -407,6 +407,7 @@
       <fileset dir="${java.dir}">
         <include name="**/deploy.wsdd"/>
         <include name="**/images/**"/>
+        <include name="**/*.xml"/>
       </fileset>
     </copy>
 
@@ -446,7 +447,7 @@
         <attribute name="Main-Class" value="uk.ac.starlink.sog.SOG"/>
         <attribute name="Class-Path"
 value="../jsky/jsky.jar ../array/array.jar ../ndx/ndx.jar ../jaiutil/jaiutil.jar 
-../fits/fits.jar ../hds/hds.jar ../jniast/jniast.jar ../soapserver/soapserver.jar"/>
+../fits/fits.jar ../hds/hds.jar ../jniast/jniast.jar ../soapserver/soapserver.jar ../astgui/astgui.jar"/>
       </manifest>
     </jar>
   </target>
@@ -913,6 +914,23 @@ value="../jsky/jsky.jar ../array/array.jar ../ndx/ndx.jar ../jaiutil/jaiutil.jar
    !-->
   <target name="dtd">
      <antstructure output="project.dtd"/>
+  </target>
+
+
+  <!-- 
+   ! Run up JSwat. Only works at Durham as pdraper...
+   !-->
+  <target name="jswat"
+          depends="compile-tests">
+
+    <path id="jswat-classpath">
+       <path refid="tests-classpath"/>
+       <pathelement location="/loc/pwdb/pdraper/java/jswat/jswat/jswat2.jar"/>
+       <pathelement location="/stardev/java/jdk-1.4.0_01/lib/tools.jar"/>
+    </path> 
+    <java classname="com.bluemarsh.jswat.Main" fork="true">
+      <classpath refid="jswat-classpath"/>
+    </java>
   </target>
 
 </project>
