--- a/build.xml
+++ b/build.xml
@@ -120,6 +120,9 @@
     <echo message="Executing UTIL target: ${what}"/>
     <ant dir="./util" target="${what}"/>
 
+    <echo message="Executing Task target: ${what}"/>
+    <ant dir="./task" target="${what}"/>
+
     <echo message="Executing JNIAST target: ${what}"/>
     <ant dir="./jniast" target="${what}"/>
 
@@ -138,6 +141,9 @@
     <echo message="Executing NDX target: ${what}"/> 
     <ant dir="./ndx" target="${what}"/> 
     
+    <echo message="Executing NDTools target: ${what}"/>
+    <ant dir="./ndtools" target="${what}"/>
+
     <echo message="Executing HDS target: ${what}"/> 
     <ant dir="./hds" target="${what}"/> 
     
@@ -308,6 +314,10 @@
        !   this and maybe create a special type).
        !--> 
       <packageset dir="util/build/java" defaultexcludes="yes">
+         <include name="**"/>
+      </packageset>
+
+      <packageset dir="task/build/java" defaultexcludes="yes">
          <include name="**"/>
       </packageset>
 
